force-app/main/default/objects/Test_Governor_Limits__mdt/Test_Governor_Limits__mdt.object-meta.xml
<CustomObject>
    <description>This object defines governor limit requirements for your tests, allowing you to fine tune your tests efficiency.</description>
    <label>Test Governor Limits</label>
    <pluralLabel>Test Governor Limits</pluralLabel>
</CustomObject>