force-app/main/default/objects/Test_Governor_Limits__mdt/fields/Callouts_Limit__c.field-meta.xml
<CustomField>
    <fullName>Callouts_Limit__c</fullName>
    <description>Governor Limit for the Number of callouts in tests.</description>
    <inlineHelpText>Governor Limit for the Number of callouts in tests.</inlineHelpText>
    <label>Callouts Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>