force-app/main/default/objects/Test_Governor_Limits__mdt/fields/CPU_Maximum_Limit__c.field-meta.xml
<CustomField>
    <fullName>CPU_Maximum_Limit__c</fullName>
    <description>Governor Limit for the Maximum CPU time in tests.</description>
    <inlineHelpText>Governor Limit for the Maximum CPU time in tests.</inlineHelpText>
    <label>CPU Maximum Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>