force-app/main/default/objects/Test_Governor_Limits__mdt/fields/DML_Rows_Limit__c.field-meta.xml
<CustomField>
    <fullName>DML_Rows_Limit__c</fullName>
    <description>Governor Limit for the Number of DML rows in tests.</description>
    <inlineHelpText>Governor Limit for the Number of DML rows in tests.</inlineHelpText>
    <label>DML Rows Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>