force-app/main/default/objects/Test_Governor_Limits__mdt/fields/DML_Statements_Limit__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Limit__c</fullName>
    <description>Governor Limit for the Number of DML statements in tests.</description>
    <inlineHelpText>Governor Limit for the Number of DML statements in tests.</inlineHelpText>
    <label>DML Statements Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>