force-app/main/default/objects/Test_Governor_Limits__mdt/fields/Email_Invocations_Limit__c.field-meta.xml
<CustomField>
    <fullName>Email_Invocations_Limit__c</fullName>
    <description>Governor Limit for the Number of Email Invocations in tests.</description>
    <inlineHelpText>Governor Limit for the Number of Email Invocations in tests.</inlineHelpText>
    <label>Email Invocations Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>