force-app/main/default/objects/Test_Governor_Limits__mdt/fields/Future_Calls_Limit__c.field-meta.xml
<CustomField>
    <fullName>Future_Calls_Limit__c</fullName>
    <description>Governor Limit for the Number of future calls in tests.</description>
    <inlineHelpText>Governor Limit for the Number of future calls in tests.</inlineHelpText>
    <label>Future Calls Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>