force-app/main/default/objects/Test_Governor_Limits__mdt/fields/Heap_Maximum_Limit__c.field-meta.xml
<CustomField>
    <fullName>Heap_Maximum_Limit__c</fullName>
    <description>Governor Limit for the Maximum heap size in tests.</description>
    <inlineHelpText>Governor Limit for the Maximum heap size in tests.</inlineHelpText>
    <label>Heap Maximum Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>