force-app/main/default/objects/Test_Governor_Limits__mdt/fields/Mobile_Apex_Push_Calls_Limit__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Apex_Push_Calls_Limit__c</fullName>
    <description>Governor Limit for the Number of Mobile Apex push calls in tests.</description>
    <inlineHelpText>Governor Limit for the Number of Mobile Apex push calls in tests.</inlineHelpText>
    <label>Mobile Apex Push Calls Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>