force-app/main/default/objects/Test_Governor_Limits__mdt/fields/Queueable_Jobs_Limit__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Jobs_Limit__c</fullName>
    <description>Governor Limit for the Number of queueable jobs added to the queue in tests.</description>
    <inlineHelpText>Governor Limit for the Number of queueable jobs added to the queue in tests.</inlineHelpText>
    <label>Queueable Jobs Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>