force-app/main/default/objects/Test_Governor_Limits__mdt/fields/SOQL_Queries_Limit__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Limit__c</fullName>
    <description>Governor Limit for the Number of SOQL queries in tests.</description>
    <inlineHelpText>Governor Limit for the Number of SOQL queries in tests.</inlineHelpText>
    <label>SOQL Queries Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>