force-app/main/default/objects/Test_Governor_Limits__mdt/fields/SOSL_Queries_Limit__c.field-meta.xml
<CustomField>
    <fullName>SOSL_Queries_Limit__c</fullName>
    <description>Governor Limit for the Number of SOSL queries in tests.</description>
    <inlineHelpText>Governor Limit for the Number of SOSL queries in tests.</inlineHelpText>
    <label>SOSL Queries Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>